frontend/test/should_fail/same_auto_generated_filter_exists.grg
test foo
{
	def var i:int;
} \ orderAscendingBy<i>, orderAscendingBy<i>